--- a/ProLink.ipynb
+++ b/ProLink.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "!apt-get update\n",
     "!wget https://www.megasoftware.net/do_force_download/megax-cc_10.2.6-1_amd64.deb\n",
-    "!apt-get install -y ghostscript mash ncbi-blast+ ./megax-cc_10.2.6-1_amd64.deb\n",
+    "!apt-get install -y ghostscript ncbi-blast+ ./megax-cc_10.2.6-1_amd64.deb\n",
     "\n",
     "!wget -O /content/muscle https://github.com/rcedgar/muscle/releases/download/v5.1/muscle5.1.linux_intel64\n",
     "!chmod +x /content/muscle\n",
